https://trello.com/c/CIk7lxk2 travail sur le HTML du profil + https://trello.com/c/3IgiDJok mise en forme UX de who_we_are + https://trello.com/c/OjzLMac5 fixation du bouton filtre version mobile

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -127,6 +127,13 @@ footer p {
     content: "\f09a";
 }
 
+/* footer_who_we_are -----------------------*/
+
+.padding-left-15-right-15{
+    padding-left:15px;
+    padding-right:15px;
+}
+
 
 /*Profile pic */
 
@@ -260,7 +267,7 @@ footer p {
 .meal-search-filter {
     float: left;
     margin-left: 15px;
-    position: fixed;
+    position: absolute;
 }
 
 .btn-filter-mobile-reinitialize {
